user link name overflow css fix

--- a/src/main/assets-admin/css/admin.less
+++ b/src/main/assets-admin/css/admin.less
@@ -81,6 +81,9 @@
           display: inline-block;
           height: 100%;
           width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
       }
 
